// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 1 url param 1`] = `
<Component
  id="audio"
  useBaseClass={false}
>
  <Component
    selectedAlbum={false}
    selectedArtist={true}
  />
</Component>
`;

exports[`renders correctly with 1 wrong url param 1`] = `<Page404 />`;

exports[`renders correctly with 2 url params 1`] = `
<Component
  id="audio"
  useBaseClass={false}
>
  <Component
    selectedAlbum={true}
    selectedArtist={true}
  />
</Component>
`;

exports[`renders correctly with 2 wrong url params 1`] = `<Page404 />`;

exports[`renders correctly without url params 1`] = `
<Component
  id="audio"
  useBaseClass={false}
>
  <Component
    selectedAlbum={false}
    selectedArtist={false}
  />
</Component>
`;
